--- a/supervisord.conf
+++ b/supervisord.conf
@@ -14,7 +14,7 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
 [program:backend]
-command=node dist/server.js
+command=su-exec appuser node dist/server.js
 directory=/app
 autostart=true
 autorestart=true
