--- a/.coda/update-readme/state.yml
+++ b/.coda/update-readme/state.yml
@@ -1,9 +1,9 @@
 feature:
   slug: update-readme
   created_at: 2026-02-23T04:02:37.019137798Z
-  updated_at: 2026-02-23T04:12:16.736112359Z
+  updated_at: 2026-02-23T04:15:17.109552759Z
 status: in_progress
-current_phase: 3
+current_phase: 4
 git:
   worktree_path: .trees/update-readme
   branch: feature/update-readme
@@ -53,19 +53,21 @@ phases:
     checks_total: 18
 - name: update-docs
   kind: quality
-  status: running
+  status: completed
   started_at: 2026-02-23T04:12:16.736805436Z
-  turns: 0
-  cost_usd: 0.0
+  completed_at: 2026-02-23T04:15:17.109551293Z
+  turns: 27
+  cost_usd: 0.8126044999999996
   cost:
-    input_tokens: 0
-    output_tokens: 0
-  duration_secs: 0
-  details: {}
+    input_tokens: 1821
+    output_tokens: 3846
+  duration_secs: 180
+  details:
+    docs_updated: true
 total:
-  turns: 8
-  cost_usd: 0.8620895000000002
+  turns: 70
+  cost_usd: 1.7692554999999994
   cost:
-    input_tokens: 0
-    output_tokens: 0
-  duration_secs: 0
+    input_tokens: 1831
+    output_tokens: 8834
+  duration_secs: 689
