--- a/.coda/update-readme/state.yml
+++ b/.coda/update-readme/state.yml
@@ -2,7 +2,7 @@ feature:
   slug: update-readme
   created_at: 2026-02-23T04:02:37.019137798Z
   updated_at: 2026-02-23T04:15:17.109552759Z
-status: in_progress
+status: completed
 current_phase: 4
 git:
   worktree_path: .trees/update-readme
@@ -64,6 +64,10 @@ phases:
   duration_secs: 180
   details:
     docs_updated: true
+pr:
+  url: https://github.com/chenlhgavin/excaliweb/pull/1
+  number: 1
+  title: 'feat(update-readme): feature implementation'
 total:
   turns: 70
   cost_usd: 1.7692554999999994
